--- a/aoc23/day20/Cargo.toml
+++ b/aoc23/day20/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.75"
+clap = { version = "4.4.11", features = ["derive"] }
 halfbrown = "0.2.4"
 nom = "7.1.3"
